--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<?php
+<!-- <?php
 if (isset($_POST['Send'])) {
     $Name =  $_POST['Name'];
     $Email = $_POST["Email"];
@@ -26,7 +26,7 @@ if (isset($_POST['Send'])) {
     $mail->send();
 
 }
-?>
+?> -->
 
 <!DOCTYPE html>
 <html lang="en">
