--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary custom-nav fixed-top">
             <div class="container navbar">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Dinesh-<span class="brand-dev">(dev)</span> </a>
+                    <a class="navbar-brand" href="#">Saraswathi - <span class="brand-dev">(Designer)</span> </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -66,33 +66,11 @@
         <section class="home-con" id="home">
 
             <div class="info-con" id="info-con">
-                <p class="name">Hi I'm Dinesh.</p>
+                <p class="name">Hi I'm Saraswathi.</p>
                 <p class="role">I'm a <span class="des" id="role"></span></p>
                 <div class="social-con">
-                    <a href="https://www.linkedin.com/in/dinesh-murugan-750655284">
-                        <div class="round" id="round">
-                            <i class="fab fa-linkedin" id="Icon"></i>
-                        </div>
-                    </a>
-
-                    <a href="https://www.instagram.com/dinesh.0x__/">
-                        <div class="round" id="round">
-                            <i class="fab fa-instagram" id="Icon"></i>
-                        </div>
-                    </a>
-
-                    <a href="https://wa.me/918940155977">
-                        <div class="round" id="round">
-                            <i class="fab fa-whatsapp" id="Icon"></i>
-                        </div>
-                    </a>
-
-                    <a href="https://www.youtube.com/@d-codetamil9345">
-                        <div class="round" id="round">
-                            <i class="fab fa-youtube" id="Icon"></i>
-                        </div>
-                    </a>
-
+                    <p class="slogan">From concept to creation, we shape ideas into extraordinary design. Elevating aesthetics, one
+                        stroke at a time.</p>
                 </div>
             </div>
 
@@ -129,11 +107,10 @@
                         <div class="card card-2  animate__animated animate__fadeInRight">
                             <div class="card2-body">
                                 <div class="card-body">
-                                    <p class="card-text">I am 18 year old tech enthusiast. I have done 5+ real-time
-                                        project
-                                        I am a freelancer, YouTuber. I am a self learn a person who likes to hear about
-                                        new
-                                        technologies. let's work together to make a tech revolution.</p>
+                                    <p class="card-text">I am 19 year old tech enthusiast. Visionary forward thinking UI
+                                        | UX Designer. Always seeking creative challenges to deliver out of the box
+                                        innovative constant. I seek challenging opportunities where I fully use my
+                                        skills for success of organization. </p>
                                     <a href="#contact"><button type="button" class="btn btn-outline-primary">Contact <i
                                                 class="fas fa-arrow-down fa-xs"></i></button></a>
 
@@ -157,25 +134,25 @@
                         <div class="radialProgressBar progress-90">
                             <div class="overlay">90%</div>
                         </div>
-                        <p class="skill-name">HTML5, CSS3, JavaScript</p>
+                        <p class="skill-name">HTML5, CSS3</p>
                     </div>
                     <div class="skill-detail">
                         <div class="radialProgressBar progress-90">
                             <div class="overlay">90%</div>
                         </div>
-                        <p class="skill-name">Wordpress, Graphy</p>
+                        <p class="skill-name">Bootstrap</p>
                     </div>
                     <div class="skill-detail">
                         <div class="radialProgressBar progress-80">
                             <div class="overlay">80%</div>
                         </div>
-                        <p class="skill-name">Bootstrap</p>
+                        <p class="skill-name">Figma</p>
                     </div>
                     <div class="skill-detail">
                         <div class="radialProgressBar progress-70">
                             <div class="overlay">70%</div>
                         </div>
-                        <p class="skill-name">React Native</p>
+                        <p class="skill-name">Networking</p>
                     </div>
                     <div class="skill-detail">
                         <div class="radialProgressBar progress-80">
@@ -187,17 +164,17 @@
                         <div class="radialProgressBar progress-80">
                             <div class="overlay">80%</div>
                         </div>
-                        <p class="skill-name">PHP</p>
+                        <p class="skill-name">C / C++</p>
                     </div>
 
                     <div class="skill-detail">
                         <div class="radialProgressBar progress-60">
                             <div class="overlay">60%</div>
                         </div>
-                        <p class="skill-name">Node.js</p>
+                        <p class="skill-name">Java</p>
                     </div>
 
-                    <div class="skill-detail">
+                    <!-- <div class="skill-detail">
                         <div class="radialProgressBar progress-70">
                             <div class="overlay">70%</div>
                         </div>
@@ -216,7 +193,7 @@
                             <div class="overlay">40%</div>
                         </div>
                         <p class="skill-name">MongoDB</p>
-                    </div>
+                    </div> -->
 
 
                 </div>
@@ -234,19 +211,24 @@
                 <div class="work-item-con">
                     <div class="card-group">
                         <div class="card animate__animated animate__fadeInLeft">
-                            <img src="./assect/works/warlpix.jpg" alt="">
-                            <p class="work-name">Warlpix</p>
-                            <p class="work-dis">E-commerce</p>
+                            <img src="./assect/works/amazon.png" alt="">
+                            <p class="work-name">Amazon Internship</p>
+                            <p class="work-dis">Quality Assurance Engineer/Tester</p>
                         </div>
                         <div class="card animate__animated animate__fadeInDown">
-                            <img src="./assect/works/matrimoney.png" alt="">
-                            <p class="work-name">azhagumatrimony</p>
-                            <p class="work-dis">other</p>
+                            <img src="./assect/works/naanmudhalvan.jpg" alt="">
+                            <p class="work-name">Naan Mudhalvan</p>
+                            <p class="work-dis"> <br>
+                                • Networking Essentials <br>
+                                • Artificial Intelligence</p>
                         </div>
                         <div class="card animate__animated animate__fadeInRight">
-                            <img src="./assect/works/warlpix.jpg" alt="">
-                            <p class="work-name">Warlpix</p>
-                            <p class="work-dis">E-commerce</p>
+                            <img src="./assect/works/dev.jpg" alt="">
+                            <p class="work-name">Programing Skills</p>
+                            <p class="work-dis">• Java <br>
+                                • Python <br>
+                                • C programming <br>
+                                • HTML and CSS</p>
                         </div>
                     </div>
 
@@ -318,7 +300,7 @@
                         <span>Copyright 2023 - All Rights Reserved</span>
                     </div>
                     <div class="con2 col-md-4">
-                        <span>Designed by <span style="color: red;">Dinesh</span> </span>
+                        <span>Designed by <span style="color: red;">Saraswathi</span> </span>
                     </div>
                     <div class="con3 col-md-4">
                         <div class="social-row-con">
@@ -369,7 +351,7 @@
     <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
     <script>
         var typed = new Typed('#role', {
-            strings: ['Web-developer.', 'App-developer.', 'Youtuber.', 'Freelancer.'],
+            strings: ['UI | UX Designer.'],
             typeSpeed: 60,
             backSpeed: 60,
             loop: true
