--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary custom-nav fixed-top">
             <div class="container navbar">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Saraswathi - <span class="brand-dev">(Designer)</span> </a>
+                    <a class="navbar-brand" href="#">Dinesh - <span class="brand-dev">(Designer)</span> </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -66,10 +66,11 @@
         <section class="home-con" id="home">
 
             <div class="info-con" id="info-con">
-                <p class="name">Hi I'm Saraswathi.</p>
+                <p class="name">Hi I'm Dinesh.</p>
                 <p class="role">I'm a <span class="des" id="role"></span></p>
                 <div class="social-con">
-                    <p class="slogan">From concept to creation, we shape ideas into extraordinary design. Elevating aesthetics, one
+                    <p class="slogan">From concept to creation, we shape ideas into extraordinary design. Elevating
+                        aesthetics, one
                         stroke at a time.</p>
                 </div>
             </div>
@@ -107,9 +108,9 @@
                         <div class="card card-2  animate__animated animate__fadeInRight">
                             <div class="card2-body">
                                 <div class="card-body">
-                                    <p class="card-text">I am 19 year old tech enthusiast. Visionary forward thinking UI
-                                        | UX Designer. Always seeking creative challenges to deliver out of the box
-                                        innovative constant. I seek challenging opportunities where I fully use my
+                                    <p class="card-text">I am 19 year old tech enthusiast. Visionary forward thinking
+                                        Full Stack Developer. Always seeking creative challenges to deliver out of the
+                                        box innovative constant. I seek challenging opportunities where I fully use my
                                         skills for success of organization. </p>
                                     <a href="#contact"><button type="button" class="btn btn-outline-primary">Contact <i
                                                 class="fas fa-arrow-down fa-xs"></i></button></a>
@@ -174,7 +175,7 @@
                         <p class="skill-name">Java</p>
                     </div>
 
-                    <!-- <div class="skill-detail">
+                    <div class="skill-detail">
                         <div class="radialProgressBar progress-70">
                             <div class="overlay">70%</div>
                         </div>
@@ -193,7 +194,7 @@
                             <div class="overlay">40%</div>
                         </div>
                         <p class="skill-name">MongoDB</p>
-                    </div> -->
+                    </div>
 
 
                 </div>
@@ -351,7 +352,7 @@
     <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
     <script>
         var typed = new Typed('#role', {
-            strings: ['UI | UX Designer.'],
+            strings: ['Developer.', 'Web Designer', 'Youtuber'],
             typeSpeed: 60,
             backSpeed: 60,
             loop: true
