--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary custom-nav fixed-top">
             <div class="container navbar">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Dinesh - <span class="brand-dev">(Designer)</span> </a>
+                    <a class="navbar-brand" href="#">Dinesh - <span class="brand-dev">(Dev)</span> </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
