--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                         <span>Copyright 2023 - All Rights Reserved</span>
                     </div>
                     <div class="con2 col-md-4">
-                        <span>Designed by <span style="color: red;">Saraswathi</span> </span>
+                        <span>Designed by <span style="color: red;">Dinesh</span> </span>
                     </div>
                     <div class="con3 col-md-4">
                         <div class="social-row-con">
